k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-serenity
  labels:
    environment: prod
    project: serenity
